# caso-calafate

./: .env.example  .gitignore  README.md  partidas.sqlite-shm  partidas.sqlite-wal  pyproject.toml
src/caso_calafate/: __init__.py  caso.py  cli.py  estado.py  fondo.py  grafo.py  llm.py  nodos.py  pixelart.py  prompts.py
src/caso_calafate/casos/: __init__.py  andesita.py  calafate.py  chaltentres.py  esquel.py  huemul.py  nahuel.py  penitentes.py  piltriquitron.py  rionegro.py  tromen.py  viedma.py
src/caso_calafate/web/: __init__.py  partidas.py  servidor.py
src/caso_calafate/web/estatico/: index.html
src/caso_calafate/web/estatico/css/: base.css  escritorio.css  pantallas.css
src/caso_calafate/web/estatico/fuentes/: fuentes.css
src/caso_calafate/web/estatico/js/: api.js  avisos.js  crt.js  escritorio.js  estado.js  fondo.js  main.js  pantallas.js  pixelart.js  retratos.js  sonido.js  tablero.js
tests/: conftest.py  test_caso.py  test_estado.py  test_fondo.py  test_grafo.py  test_nodos.py  test_pixelart.py  test_web.py
