[project]
name = "caso-calafate"
version = "0.1.0"
description = "El Caso Calafate — juego de misterio por interrogatorios: agentes LLM orquestados con LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.0",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
detective = "caso_calafate.cli:main"
detective-web = "caso_calafate.web:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E: errores de estilo (PEP 8)
# F: errores lógicos (variables/imports sin usar)
# I: orden de imports
# UP: modernizaciones de sintaxis (pyupgrade)

[tool.pytest.ini_options]
testpaths = ["tests"]
